# aether

./: .env.example  CHANGELOG.md  Cargo.toml  TODO.md
.claude/: settings.local.json
data/: aether.db
src/: ai_service.rs  bot.rs  config.rs  conversation.rs  event_handler.rs  lib.rs  main.rs  traits.rs
src/command/: context.rs  gateway.rs  mod.rs  parser.rs  permission.rs  registry.rs
src/modules/: mod.rs
src/modules/admin/: handlers.rs  mod.rs
src/modules/persona/: handlers.rs
src/ui/: mod.rs  templates.rs
tests/: bot_integration.rs
